--[[

Group Bulletin Board 	

3.22
- Added option for headers to start collapsed
- Shift+Left-clicking on a header will toggle collapse on all headers

3.21
- Addition of a search bar that lets you search/filter. Should make finding specific things in a broad category much easier. Huge shoutout to juemrami for adding this feature and in a clean non janky manner
- French lfg channel localization fixed (juemrami)

3.20
- Fixed the addon breaking for some people

3.19
- Hiding wotlk and tbc panels for SoD

3.18
- SoD P3

3.17
- Logic to reset turn on all filters after reseting them

3.16
- New travel category thanks to surgioclemente. Enables all summoning related things to be moved there
- Some cleanup of wotlk, classic code
- hopefully fixes SM bugs

3.11
- Added realm to character names in request list
- Removed the display of the additional tabs that aren't supported by Classic Era based on version. Will still display in WotLK+
    - I only play Classic Era so I'm not verifying the functionality of this on WotLK+ besides it's display
- Updated some APIs to new client versions

3.10 
= Hopefully mixed new patch issues

3.09
- Fixed RU tags (courtesy of tierggg)
- French localization (shout out to Isilorn for doing it)
- Fixes 

3.08 
- Fix for entries rapidly swapping places - Thanks to mnejing for fixing this
- Russian localization - Shout out to tierggg for doing this

3.07 
- Updated left click to whisper the person what role you are and for which dungeon you are applying - Thanks to mnejing for adding this

3.06
- Fix for Naxx
- Transaltion for Chinese 

3.05
- Removed the clicking noise in background

3.04
- Added auto refresh for lfg tool
- Semi fixed add-on exploding on custom
- BB should be honoring users selected lfg tool category unless it's not set

3.03
- Added tab for LFG Tool requests 
- Never use custom in lfg tool because it makes things blow up
- Added support for the lfg tool tab
- Fixed a bug and introduced new ones