@@ -64,7 +64,7 @@ GBB.locales = {
 		["CboxTagsCustom"]="Custom",
 		["CboxRemoveRaidSymbols"]="Remove raid symbols like {rt1}",
 		["CboxOrderNewTop"]="Sort new requests above",
-		["CboxHeadersStartFolded"]="Headers start folded",
+		["CboxHeadersStartFolded"]="Dungeon categories start collapsed",
 		["CboxColorByClass"]="Colorize name by class",
 		["CboxShowClassIcon"]="and show icon",
 		["CboxUseAllInLFG"]="Show all messages from lfg-channel",
@@ -102,9 +102,9 @@ GBB.locales = {
 		["BtnInvite"]="Invite %s",
 		["BtnWho"]="Who %s",
 		["BtnIgnore"]="Ignore %s",
-		["BtnFold"]="Fold",
-		["BtnFoldAll"]="Fold all",
-		["BtnUnFoldAll"]="Unfold all",
+		["BtnFold"]="Collapse",
+		["BtnFoldAll"]="Collapse all",
+		["BtnUnFoldAll"]="Expand all",
 		["BtnCancel"]="Cancel",
 		["BtnEntryColor"]="Color of the message",
 		["BtnHeroicDungeonColor"]="Color of heroic dungeon tooltip",
@@ -125,7 +125,7 @@ GBB.locales = {
 		["TabGroup"]="Members",
 		["TabLfg"]="Tool Requests",
 
-		["AboutUsage"]="GBB searches the chat messages for dungeon requests in the background. To whisper a person, simply click on the entry with the left mouse button. For a '/who' a shift + left click is enough. The dungeon list can be filtered in the settings. You can also fold this by left-clicking on the dungeon name.|nOld entries are filtered out after 150 seconds.",
+		["AboutUsage"]="GBB searches the chat messages for dungeon requests in the background. To whisper a person, simply click on the entry with the left mouse button. For a '/who' a shift + left click is enough. The dungeon list can be filtered in the settings. You can also collapse this by left-clicking on the dungeon name.|nOld entries are filtered out after 150 seconds.",
 		["AboutSlashCommand"]="<value> can be true, 1, enable, false, 0, disable. If <value> is omitted, the current status switches.",
 		["AboutInfo"]="GBB provides an overview of the endless requests in the chat channels. It detects all requests to the classic dungeons, sorts them and presents them clearly way. Numerous filtering options reduce the gigantic number to exactly the dungeons that interest you. And if that's not enough, GBB will let you know about any new request via a sound or chat notification. And finally, GBB can post your request repeatedly.",
 		["AboutCredits"]="Original by GPI / Erytheia-Razorfen",
